fix font.. remove roboto that doesn't work on firefox

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,7 @@
 /* styles-6.css */
 /* ======= Base ======= */
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #545E6C;
   background: #f5f5f5;
   font-size: 14px;
